Add separation lines

--- a/Question 1.ipynb
+++ b/Question 1.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Question 2\n",
     "# Question 1\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -31,8 +30,15 @@
     "plt.figure(figsize=(15, 10))\n",
     "\n",
     "# Original and transformed images\n",
-    "plt.subplot(2, 3, 1); plt.imshow(img, cmap='gray'); plt.title('Original Image'); plt.axis('off')\n",
-    "plt.subplot(2, 3, 2); plt.imshow(transformed, cmap='gray'); plt.title('Transformed Image'); plt.axis('off')\n",
+    "plt.subplot(2, 3, 1)\n",
+    "plt.imshow(img, cmap='gray')\n",
+    "plt.title('Original Image')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.subplot(2, 3, 2)\n",
+    "plt.imshow(transformed, cmap='gray')\n",
+    "plt.title('Transformed Image')\n",
+    "plt.axis('off')\n",
     "\n",
     "# Transformation curve\n",
     "plt.subplot(2, 3, 3)\n",
@@ -46,14 +52,16 @@
     "plt.legend()\n",
     "\n",
     "# Original histogram\n",
-    "plt.subplot(2, 3, 4); plt.hist(img.ravel(), bins=50, color='blue', alpha=0.7, edgecolor='black')\n",
+    "plt.subplot(2, 3, 4)\n",
+    "plt.hist(img.ravel(), bins=50, color='blue', alpha=0.7, edgecolor='black')\n",
     "plt.title('Original Image Histogram')\n",
     "plt.xlabel('Intensity Value')\n",
     "plt.ylabel('Frequency')\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
     "# Transformed histogram\n",
-    "plt.subplot(2, 3, 5); plt.hist(transformed.ravel(), bins=50, color='red', alpha=0.7, edgecolor='black')\n",
+    "plt.subplot(2, 3, 5)\n",
+    "plt.hist(transformed.ravel(), bins=50, color='red', alpha=0.7, edgecolor='black')\n",
     "plt.title('Transformed Image Histogram')\n",
     "plt.xlabel('Intensity Value')\n",
     "plt.ylabel('Frequency')\n",
@@ -73,8 +81,11 @@
     "plt.show()\n",
     "\n",
     "# Statistical analysis\n",
+    "print(\"=\" * 50)\n",
     "print(\"INTENSITY TRANSFORMATION ANALYSIS\")\n",
-    "print(\"Original Image Statistics:\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "print(f\"\\nOriginal Image Statistics:\")\n",
     "print(f\"Mean intensity: {np.mean(img):.2f}\")\n",
     "print(f\"Standard deviation: {np.std(img):.2f}\")\n",
     "print(f\"Minimum intensity: {np.min(img)}\")\n",
@@ -98,7 +109,9 @@
     "analyze_range(img, \"Original\", ranges)\n",
     "analyze_range(transformed, \"Transformed\", ranges)\n",
     "\n",
-    "print(f\"\\nTRANSFORMATION EFFECT ANALYSIS\")\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
+    "print(\"TRANSFORMATION EFFECT ANALYSIS\")\n",
+    "print(\"=\" * 50)\n",
     "print(\"1. DARK TONES (0-50): Mostly preserved, but intensity 50 jumps to 100\")\n",
     "print(\"2. MID TONES (51-150): Dramatically brightened and expanded\")\n",
     "print(\"3. BRIGHT TONES (151-255): Slightly modified with a dip at 150\")\n",
