--- a/Question 1.ipynb
+++ b/Question 1.ipynb
@@ -17,10 +17,10 @@
     "\n",
     "# Create transformation LUT\n",
     "lut = np.zeros(256, dtype=np.uint8)\n",
-    "lut[0:50] = np.arange(0, 50)           # 0-49: same as input\n",
-    "lut[50] = 100                          # At 50: jump to 100\n",
+    "lut[0:50] = np.arange(0, 50)                              # 0-49: same as input\n",
+    "lut[50] = 100                                             # At 50: jump to 100\n",
     "lut[51:151] = np.linspace(101, 255, 100, dtype=np.uint8)  # 51-150: increase to 255\n",
-    "lut[150] = 150                         # At 150: drop to 150\n",
+    "lut[150] = 150                                            # At 150: drop to 150\n",
     "lut[151:256] = np.linspace(151, 255, 105, dtype=np.uint8) # 151-255: increase to 255\n",
     "\n",
     "# Apply transformation\n",
@@ -30,19 +30,11 @@
     "plt.figure(figsize=(15, 10))\n",
     "\n",
     "# Original and transformed images\n",
-    "plt.subplot(2, 3, 1)\n",
-    "plt.imshow(img, cmap='gray')\n",
-    "plt.title('Original Image')\n",
-    "plt.axis('off')\n",
-    "\n",
-    "plt.subplot(2, 3, 2)\n",
-    "plt.imshow(transformed, cmap='gray')\n",
-    "plt.title('Transformed Image')\n",
-    "plt.axis('off')\n",
+    "plt.subplot(2, 3, 1); plt.imshow(img, cmap='gray'); plt.title('Original Image'); plt.axis('off')\n",
+    "plt.subplot(2, 3, 2); plt.imshow(transformed, cmap='gray'); plt.title('Transformed Image'); plt.axis('off')\n",
     "\n",
     "# Transformation curve\n",
-    "plt.subplot(2, 3, 3)\n",
-    "plt.plot(lut, 'r-', linewidth=2)\n",
+    "plt.subplot(2, 3, 3); plt.plot(lut, 'r-', linewidth=2)\n",
     "plt.title('Intensity Transformation Curve')\n",
     "plt.xlabel('Input Intensity')\n",
     "plt.ylabel('Output Intensity')\n",
@@ -52,16 +44,14 @@
     "plt.legend()\n",
     "\n",
     "# Original histogram\n",
-    "plt.subplot(2, 3, 4)\n",
-    "plt.hist(img.ravel(), bins=50, color='blue', alpha=0.7, edgecolor='black')\n",
+    "plt.subplot(2, 3, 4); plt.hist(img.ravel(), bins=50, color='blue', alpha=0.7, edgecolor='black')\n",
     "plt.title('Original Image Histogram')\n",
     "plt.xlabel('Intensity Value')\n",
     "plt.ylabel('Frequency')\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
     "# Transformed histogram\n",
-    "plt.subplot(2, 3, 5)\n",
-    "plt.hist(transformed.ravel(), bins=50, color='red', alpha=0.7, edgecolor='black')\n",
+    "plt.subplot(2, 3, 5); plt.hist(transformed.ravel(), bins=50, color='red', alpha=0.7, edgecolor='black')\n",
     "plt.title('Transformed Image Histogram')\n",
     "plt.xlabel('Intensity Value')\n",
     "plt.ylabel('Frequency')\n",
