--- a/Question 8.ipynb
+++ b/Question 8.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q8\n",
+    "# Question 8\n",
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
