--- a/Question 10.ipynb
+++ b/Question 10.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q10\n",
+    "# Question 10\n",
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
