--- a/Question 9.ipynb
+++ b/Question 9.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q9\n",
+    "# Question 9\n",
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
